@startuml typeahead-fsm-state-diagram
scale 800 width
hide empty description

[*] --> READY_FOR_INPUT: data_loaded
READY_FOR_INPUT --> SUGGESTIONS_VISIBLE: got_input_focus
SUGGESTIONS_VISIBLE --> READY_FOR_INPUT: lost_input_focus
SUGGESTIONS_VISIBLE --> SUGGESTIONS_VISIBLE: text_changed
SUGGESTIONS_VISIBLE --> SUGGESTIONS_VISIBLE: move_highlighted_suggestion_up
SUGGESTIONS_VISIBLE --> SUGGESTIONS_VISIBLE: move_highlighted_suggestion_down
SUGGESTIONS_VISIBLE --> SELECTED: selection_entered
SELECTED --> READY_FOR_INPUT: selection_cleared

@enduml